--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <a class="navbar-brand" href="/admin" style="font-weight: 500;">ADMIN</a>
@@ -20,32 +18,25 @@
         <a class="nav-link" href="/admin/all-users"> <i class='bx bx-list-ul text-dark'></i> All Users</a>
       </li>
 
-  <li class="nav-item">
-        <a class="nav-link" href="/admin/view-category"> <i class='bx bx-pie-chart-alt-2 text-dark'></i> All Category</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/view-category"> <i class='bx bx-pie-chart-alt-2 text-dark'></i> All
+          Category</a>
       </li>
 
- <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="/admin/all-order"><i class='bx bx-user text-dark'></i> All orders</a>
       </li>
 
- <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="/admin/add-banner"><i class="fa-solid fa-image text-dark"></i> Banner</a>
       </li>
 
-<li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="/admin/report"> <i class="fa fa-area-chart text-dark"></i>Report</a>
       </li>
-
-      
-
-
-     
- 
-
-
   </div>
-   <a href="/admin/admin-logout">
-           
-            <span class="links_name btn bg-Dark text-light">Log out</span>
-          </a>
+  <a href="/admin/admin-logout">
+
+    <span class="links_name btn bg-Dark text-light">Log out</span>
+  </a>
 </nav>
