--- a/views/partials/user-footer.hbs
+++ b/views/partials/user-footer.hbs
@@ -1,9 +1,5 @@
-
-
 <footer class="footer-section">
     <div class="container" style="">
-
-
     </div>
     </div>
     <div class="footer-content pt-5 pb-5">
@@ -11,7 +7,9 @@
             <div class="col-xl-4 col-lg-4 mb-50">
                 <div class="footer-widget">
                     <div class="footer-logo mx-4">
-                        <a class="navbar-brand" style="color: rgb(255, 255, 255);" href="/"><i class="fa-brands fa-pied-piper-pp" style="font-size: 2rem;"></i> <strong class="text-danger">
+                        <a class="navbar-brand" style="color: rgb(255, 255, 255);" href="/"><i
+                                class="fa-brands fa-pied-piper-pp" style="font-size: 2rem;"></i> <strong
+                                class="text-danger">
                                 SHOPPIE</strong></a>
                     </div>
                     <div class="footer-text mx-4">
@@ -30,13 +28,13 @@
                     <div class="footer-widget-heading">
                         <h3>Useful Links</h3>
                     </div>
-                    <ul >
+                    <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/view-category/MEN">Men</a></li>
                         <li><a href="/view-category/WOMEN">Women</a></li>
                         <li><a href="/view-category/KIDS">Kids</a></li>
-                       
-                       
+
+
                     </ul>
                 </div>
             </div>
@@ -64,18 +62,19 @@
             <div class="row">
                 <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                     <div class="copyright-text">
-                        <p>Copyright &copy; 2022, All Right Reserved <a href="/"><i class="fa-brands fa-pied-piper-pp"></i>Shoppie</a>
+                        <p>Copyright &copy; 2022, All Right Reserved <a href="/"><i
+                                    class="fa-brands fa-pied-piper-pp"></i>Shoppie</a>
                         </p>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                    <div class="footer-menu">
+                    <div class="footer-menu" style="text-decoration: none;">
                         <ul>
                             <li><a href="/">Home</a></li>
                             <li><a href="/view-category/MEN">Men</a></li>
                             <li><a href="/view-category/WOMEN">Women</a></li>
                             <li><a href="/view-category/KIDS">Kids</a></li>
-                            
+
                         </ul>
                     </div>
                 </div>
@@ -85,7 +84,9 @@
 </footer>
 
 <style>
-
+    a{
+        text-decoration: none;
+    }
     ul {
         margin: 0px;
         padding: 0px;
@@ -125,7 +126,7 @@
     }
 
     .footer-content {
-        
+
         z-index: 2;
     }
 
