--- a/views/admin/admin-login.hbs
+++ b/views/admin/admin-login.hbs
@@ -4,45 +4,46 @@
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-light text-dark" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
-              
-         
-              <form action="/admin/admin-login" method="post">
-            <div class="mb-md-5 mt-md-4 pb-5">
-             
-            
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              {{#if loginadminErr}}
-              <p class="error text-danger">invalid password</p>
-              {{/if}}
-              <p class="text-dark-50 mb-5">Please enter your Email Id and password!</p>
 
-              <div class="form-outline form-white mb-4">
-                <input type="email" name="email" id="typeEmailX" class="form-control form-control-lg" required />
-                <label class="form-label" for="typeEmailX">Email</label>
+
+            <form action="/admin/admin-login" method="post">
+              <div class="mb-md-5 mt-md-4 pb-5">
+
+
+                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                {{#if loginadminErr}}
+                <p class="error text-danger">invalid password</p>
+                {{/if}}
+                <p class="text-dark-50 mb-5">Please enter your Email Id and password!</p>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="email" name="email" id="typeEmailX" class="form-control form-control-lg" required />
+                  <label class="form-label" for="typeEmailX">Email</label>
+                </div>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg"
+                    required />
+                  <label class="form-label" for="typePasswordX">Password</label>
+                </div>
+
+
+
+                <button class="btn btn-warning btn-lg px-5" type="submit">Login</button>
+
+                <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                  <a href="#!" class="text-dark"><i class="fab fa-facebook-f fa-lg"></i></a>
+                  <a href="#!" class="text-dark"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                  <a href="#!" class="text-dark"><i class="fab fa-google fa-lg"></i></a>
+                </div>
+
               </div>
 
-              <div class="form-outline form-white mb-4">
-                <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" required />
-                <label class="form-label" for="typePasswordX">Password</label>
+              <div>
+                <p class="mb-0">Don't have an account? <a href="/signup" class="text-dark fw-bold">Sign Up</a>
+                </p>
               </div>
-
-           
-
-              <button class="btn btn-warning btn-lg px-5" type="submit">Login</button>
-
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-dark"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="#!" class="text-dark"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                <a href="#!" class="text-dark"><i class="fab fa-google fa-lg"></i></a>
-              </div>
-                
-            </div>
-
-            <div>
-              <p class="mb-0">Don't have an account? <a href="/signup" class="text-dark fw-bold">Sign Up</a>
-              </p>
-            </div>
-              </form>
+            </form>
           </div>
         </div>
       </div>
