--- a/views/admin/edit-category.hbs
+++ b/views/admin/edit-category.hbs
@@ -1,30 +1,29 @@
 <section class="section mt-5" style="background-color: aliceblue; width: 55%; margin-left: 18rem;">
-   <h3 style="color: rgb(91, 90, 90);">Edit Category</h3>
-   <div class="container">
+  <h3 style="color: rgb(91, 90, 90);">Edit Category</h3>
+  <div class="container">
     <div class="row">
-        <form action="/admin/edit-category/{{category._id}}" method="post" enctype="multipart/form-data">
-  {{!-- <div class="col-md-6"></div>
-    <label for="" class="form-label">Brand:</label>
-    <input type="text" name="brand" value="{{category.brand}}" class="form-control"> --}}
- 
-   <select class="form-select mt-3" name="category"  class="form-control" aria-label="Default select example">
-  <option selected>CATAGORY</option>
-  <option value="MEN">MEN</option>
-  <option value="KIDS">KIDS</option>
-  <option value="WOMEN">WOMEN</option>
-</select>
+      <form action="/admin/edit-category/{{category._id}}" method="post" enctype="multipart/form-data">
 
- 
-  
 
-  <div class="mt-3">
-    <label for="" class="form-label">image:</label>
-    <img src="/category-image/{{category._id}}.jpg" alt="" style="width: 100px; height:auto" id="imgView">
-    <input type="file" name="image"  value="{{category._id}}.jpg" class="form-control" id="exampleInputPassword1" onchange="viewImage(event)">
+        <select class="form-select mt-3" name="category" class="form-control" aria-label="Default select example">
+          <option selected>CATAGORY</option>
+          <option value="MEN">MEN</option>
+          <option value="KIDS">KIDS</option>
+          <option value="WOMEN">WOMEN</option>
+        </select>
+
+
+
+
+        <div class="mt-3">
+          <label for="" class="form-label">image:</label>
+          <img src="/category-image/{{category._id}}.jpg" alt="" style="width: 100px; height:auto" id="imgView">
+          <input type="file" name="image" value="{{category._id}}.jpg" class="form-control" id="exampleInputPassword1"
+            onchange="viewImage(event)">
+        </div>
+
+        <button type="submit" class="btn btn-warning mt-3">Submit</button>
+      </form>
+    </div>
   </div>
-
-  <button type="submit" class="btn btn-warning mt-3">Submit</button>
-</form>
-    </div>
-    </div>
 </section>
