--- a/views/user/address-selection.hbs
+++ b/views/user/address-selection.hbs
@@ -3,14 +3,6 @@
     <form action="/order-success" id="checkout-form"></form>
     <div class="row">
       <div class="col-lg-12">
-        {{!-- <div class="breadcrumb__text">
-          <h4>Check Out</h4> --}}
-          {{!-- <div class="breadcrumb__links">
-            <a href="/">Home</a>
-            <span>Check Out</span>
-          </div> --}}
-          {{!--
-        </div> --}}
       </div>
     </div>
   </div>
@@ -160,10 +152,6 @@
 
           </div>
         </div>
-        {{!-- <h4 class="order__title ms-4">Your order</h4>
-        <div class="checkout_order_products fw-bold ms-4">Product
-          <span class="">Total</span>
-        </div> --}}
         <ul class="checkout_total_products ms-2" type="circle">
           {{#each products}}
           <li class="ms-2"> {{this.product.Name}}</li>
@@ -172,35 +160,29 @@
 
         <ul class="checkout_total_all fw-bold fs-6">
           <hr class="mt-5">
-          <li class=" ml-3 " style="list-style-type:none;">Total Amount <span id="totalPrice"  style="margin-left:  100px ;" >₹{{total}}</span></li>
+          <li class=" ml-3 " style="list-style-type:none;">Total Amount <span id="totalPrice"
+              style="margin-left:  100px ;">₹{{total}}</span></li>
 
-          <li class=" ml-3 " style="list-style-type:none;">Reduced Amount <span id="discountamount" style="margin-left:  74px ;"  >₹{{total}}</span></li>
+          <li class=" ml-3 " style="list-style-type:none;">Reduced Amount <span id="discountamount"
+              style="margin-left:  74px ;">₹{{total}}</span></li>
           <hr>
           {{#if Allcoupons}}
           <p id="total">Amount Payble:</p>
 
           {{else}}
-          <li class=" ml-3 " style="list-style-type:none;">Amount Payble :<span id="price" style="margin-left:  85px ;" >₹{{total}}</span>
+          <li class=" ml-3 " style="list-style-type:none;">Amount Payble :<span id="price"
+              style="margin-left:  85px ;">₹{{total}}</span>
           </li>
-<hr>
+          <hr>
           {{/if}}
         </ul>
 
 
-
-        {{!-- <h4 class="order__title ms-4">Your order</h4> --}}
-        {{!-- <div class="checkout_order_products fw-bold ms-4">Product
-          <span class="">Total</span>
-        </div> --}}
         <ul class="checkout_total_products ms-2" type="circle">
           {{#each products}}
           <li class="ms-2"> {{this.product.Name}}</li>
           {{/each}}
         </ul>
-        {{!-- <ul class="checkout_total_all">
-          <li class="fs-4">Total <span id="totalPrice">{{total}}</span> <span>₹</span></li>
-        </ul> --}}
-
 
         <div class="form-check mt-2 ms-4">
           <input class="form-check-input" type="radio" name="paymentMethod" id="paypal" value="ONLINE"
@@ -369,9 +351,9 @@
         } else if (response.offerprice) {
           console.log(response.discountVal)
           console.log(response.offerprice)
-                   document.getElementById('discountamount').innerHTML ='-₹'+response.discountVal;
-                  document.getElementById('price').innerHTML = '₹'+response.offerprice;
- 
+          document.getElementById('discountamount').innerHTML = '-₹' + response.discountVal;
+          document.getElementById('price').innerHTML = '₹' + response.offerprice;
+
 
         } else {
           document.getElementById('userAll').innerHTML = 'cuopon invalid';
