--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -1,59 +1,57 @@
-
-
-
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-      	{{#each banner}}
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/images/{{this.img.[0]}}" alt="First slide">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        {{#each banner}}
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="/images/{{this.img.[0]}}" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="/images/{{this.img.[1]}}" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="/images/{{this.img.[2]}}" alt="Third slide">
+        </div>
+        {{/each}}
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/{{this.img.[1]}}" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/{{this.img.[2]}}" alt="Third slide">
-    </div>
-    	{{/each}}
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 
 
 <h1 class="text-center mt-5"
-	style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:x-large; font-weight: 700; color: rgb(80, 79, 79);">
-	ALL CATEGORIES WE HAVE</h1>
+    style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:x-large; font-weight: 700; color: rgb(80, 79, 79);">
+    ALL CATEGORIES WE HAVE</h1> 
+   
 
 
 {{!-- category --}}
 <section class="page-section mt-5" id="team">
-	<div class="container">
+    <div class="container">
 
-		<div class="row">
-			{{#each category}}
-			<div class="col-md-4 ">
-				<div class="team-member text-center">
-					<a href="/view-category/{{this.category}}">
-						<img class="mx-auto rounded-circle" src="/category-image/{{this._id}}.jpg" height="200px;"
-							alt="..." /></a>
-					<h4>{{this.category}}</h4>
-				</div>
-			</div>
-			{{/each}}
-		</div>
-	</div>
+        <div class="row">
+            {{#each category}}
+            <div class="col-md-4 ">
+                <div class="team-member text-center">
+                    <a href="/view-category/{{this.category}}">
+                        <img class="mx-auto rounded-circle" src="/category-image/{{this._id}}.jpg" height="200px;"
+                            alt="..." /></a>
+                    <h4>{{this.category}}</h4>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+    </div>
 </section>
 
 
@@ -62,215 +60,247 @@
 
 
 <h1 class=" mt-5"
-	style=" margin-left: 7rem; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:x-large; font-weight: 700; color: rgb(80, 79, 79);">
-	New Arrivals..</h1>
+    style=" margin-left: 7rem; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:x-large; font-weight: 700; color: rgb(80, 79, 79);">
+    New Arrivals..</h1>
 
 {{!-- image card --}}
 
 
 <div class="container">
-<div class="row">
-	{{#each products}}
-    <div class="col-md-3 col-sm-6 mt-5 mb-5">
-        <div class="product-grid">
-            <div class="product-image">
-                <a href="/view-image/{{this._id}}">
-                    <img class="pic-1" src="/images/{{this.img.[0]}}">
-                </a>
-                
-                <ul class="product-links">
-                    <li><a onclick="addToWishlist('{{this._id}}')"><i class="far fa-heart mt-3 ms-3"></i></a></li>
-                    <li><a onclick="addToCart('{{this._id}}')"><i class="fas fa-shopping-cart mt-3 ms-3"></i></a></li>
-                    {{!-- <li><a href="#"><i class="fa fa-random mt-3 ms-3"></i></a></li> --}}
-                    <li><a href="/view-image/{{this._id}}"><i class="fa fa-eye mt-3 ms-3"></i></a></li>
-                </ul>
-            </div>
-            <div class="product-content">
-				<p class="text-secondary">{{this.description}}</p>
-			
-                <h3 class="title">{{this.brand}}</h3>
-                <ul class="rating">
-                    <li class="fas fa-star text-warning"></li>
-                    <li class="fas fa-star text-warning"></li>
-                    <li class="fas fa-star text-warning"></li>
-                    <li class="far fa-star"></li>
-                    <li class="far fa-star "></li>
-                </ul>
-                <div class="price">
-				<span class="text-danger">₹{{this.orginalPrice}}</span>
-				 ₹{{this.offerPrice}}
-				</div>
+    <div class="row">
+        {{#each products}}
+        <div class="col-md-3 col-sm-6 mt-5 mb-5">
+            <div class="product-grid">
+                <div class="product-image">
+                    <a href="/view-image/{{this._id}}">
+                        <img class="pic-1" src="/images/{{this.img.[0]}}">
+                    </a>
+
+                    <ul class="product-links">
+                        <li><a onclick="addToWishlist('{{this._id}}')"><i class="far fa-heart mt-3 ms-3"></i></a></li>
+                        <li><a onclick="addToCart('{{this._id}}')"><i class="fas fa-shopping-cart mt-3 ms-3"></i></a>
+                        </li>
+
+                        <li><a href="/view-image/{{this._id}}"><i class="fa fa-eye mt-3 ms-3"></i></a></li>
+                    </ul>
+                </div>
+                <div class="product-content">
+                    <p class="text-secondary">{{this.description}}</p>
+
+                    <h3 class="title">{{this.brand}}</h3>
+                    <ul class="rating">
+                        <li class="fas fa-star text-warning"></li>
+                        <li class="fas fa-star text-warning"></li>
+                        <li class="fas fa-star text-warning"></li>
+                        <li class="far fa-star"></li>
+                        <li class="far fa-star "></li>
+                    </ul>
+                    <div class="price">
+                        <span class="text-danger">₹{{this.orginalPrice}}</span>
+                        ₹{{this.offerPrice}}
+                    </div>
+                </div>
             </div>
         </div>
+        {{/each}}
     </div>
-    {{/each}}
 </div>
-</div>
-
-
-
-
-
 <style>
-	.product-grid{
-    font-family: 'Antic Slab', serif;
-  
-    transition: all 0.3s ease 0s;
-}
-.product-grid:hover{ box-shadow: 0 0 10px rgba(0,0,0,0.2); }
-.product-grid .product-image{
-    overflow: hidden;
-    position: relative;
-}
-.product-grid .product-image a.image{ display: block; }
-.product-grid .product-image img{
-    width: 100%;
-    height: auto;
-}
-.product-grid .product-sale-label{
-    color: #fff;
-    background-color: #76b713;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    padding: 10px 6px 9px;
-    position: absolute;
-    left: 7px;
-    top: 7px;
-}
-.product-grid .product-links{
-    width: 50px;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    opacity: 0;
-    transform: translateX(-50%) translateY(-50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    transition: all 0.4s ease;
-}
-.product-grid:hover .product-links{ opacity: 1; }
-.product-grid .product-links li{
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    transform: translateX(-50px);
-    filter: blur(5px);
-    transition: all 0.4s ease 0s;
-}
-.product-grid .product-links li:nth-child(even){ transform: translateX(50px); }
-.product-grid:hover .product-links li{
-    filter: blur(0);
-    transform: translateX(0);
-}
-.product-grid .product-links li a{
-    color: #666;
-    background: rgba(255,255,255,0.9);
-    font-size: 16px;
-    line-height: 50px;
-    width: 50px;
-    height: 50px;
-    display: block;
-    transition: all 0.3s ease 0s;
-}
-.product-grid .product-links li a:hover{
-    color: #fff;
-    background: #76b713;
-}
-.product-grid .product-content{
-    background-color: #fff;
-    padding: 15px 10px 3px;
-}
-.product-grid .title{
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: capitalize;
-    margin: 0 0 10px;
-}
-.product-grid .title a{
-    color: #222;
-    transition: all 0.3s ease 0s;
-}
-.product-grid .title a:hover{ color: #76b713; }
-.product-grid .rating{
-    width: 80px;
-    padding: 0;
-    margin: 0 0 9px;
-    list-style: none;
-    vertical-align: top;
-    display: inline-block;
-}
-.product-grid .rating li{
-    color: #222;
-    font-size: 11px;
-    display: inline-block;
-}
-.product-grid .rating li.far{ color: #777; }
-.product-grid .price{
-    color: #76b713;
-    font-size: 18px;
-    font-weight: 600;
-    text-align: right;
-    width: calc(100% - 85px);
-    display: inline-block;
-}
-.product-grid .price span{
-    color: #999;
-    font-size: 16px;
-    font-weight: 500;
-    text-decoration: line-through;
-}
-@media screen and (max-width:990px){
-    .product-grid{ margin: 0 0 30px; }
-}
+    .product-grid {
+        font-family: 'Antic Slab', serif;
+
+        transition: all 0.3s ease 0s;
+    }
+
+    .product-grid:hover {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .product-grid .product-image {
+        overflow: hidden;
+        position: relative;
+    }
+
+    .product-grid .product-image a.image {
+        display: block;
+    }
+
+    .product-grid .product-image img {
+        width: 100%;
+        height: auto;
+    }
+
+    .product-grid .product-sale-label {
+        color: #fff;
+        background-color: #76b713;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 1px;
+        padding: 10px 6px 9px;
+        position: absolute;
+        left: 7px;
+        top: 7px;
+    }
+
+    .product-grid .product-links {
+        width: 50px;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        opacity: 0;
+        transform: translateX(-50%) translateY(-50%);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 1;
+        transition: all 0.4s ease;
+    }
+
+    .product-grid:hover .product-links {
+        opacity: 1;
+    }
+
+    .product-grid .product-links li {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        transform: translateX(-50px);
+        filter: blur(5px);
+        transition: all 0.4s ease 0s;
+    }
+
+    .product-grid .product-links li:nth-child(even) {
+        transform: translateX(50px);
+    }
+
+    .product-grid:hover .product-links li {
+        filter: blur(0);
+        transform: translateX(0);
+    }
+
+    .product-grid .product-links li a {
+        color: #666;
+        background: rgba(255, 255, 255, 0.9);
+        font-size: 16px;
+        line-height: 50px;
+        width: 50px;
+        height: 50px;
+        display: block;
+        transition: all 0.3s ease 0s;
+    }
+
+    .product-grid .product-links li a:hover {
+        color: #fff;
+        background: #76b713;
+    }
+
+    .product-grid .product-content {
+        background-color: #fff;
+        padding: 15px 10px 3px;
+    }
+
+    .product-grid .title {
+        font-size: 18px;
+        font-weight: 700;
+        text-transform: capitalize;
+        margin: 0 0 10px;
+    }
+
+    .product-grid .title a {
+        color: #222;
+        transition: all 0.3s ease 0s;
+    }
+
+    .product-grid .title a:hover {
+        color: #76b713;
+    }
+
+    .product-grid .rating {
+        width: 80px;
+        padding: 0;
+        margin: 0 0 9px;
+        list-style: none;
+        vertical-align: top;
+        display: inline-block;
+    }
+
+    .product-grid .rating li {
+        color: #222;
+        font-size: 11px;
+        display: inline-block;
+    }
+
+    .product-grid .rating li.far {
+        color: #777;
+    }
+
+    .product-grid .price {
+        color: #76b713;
+        font-size: 18px;
+        font-weight: 600;
+        text-align: right;
+        width: calc(100% - 85px);
+        display: inline-block;
+    }
+
+    .product-grid .price span {
+        color: #999;
+        font-size: 16px;
+        font-weight: 500;
+        text-decoration: line-through;
+    }
+
+    @media screen and (max-width:990px) {
+        .product-grid {
+            margin: 0 0 30px;
+        }
+    }
 </style>
 
 
 
 <script>
-	function addToCart(proId) {
-		$.ajax({
-			url: '/add-to-cart/' + proId,
-			method: 'get',
-			success: (response) => {
-				if (response.status) {
-					let count = $('#cartCount').html()
-					count = parseInt(count) + 1
-					$("#cartCount").html(count)
-                     Swal.fire({
-                            position: 'center',
-                            icon: 'success',
-                            title: 'Added to Cart',
-                            showConfirmButton: false,
-                            timer: 800
-                        })
-				}
+    function addToCart(proId) {
+        $.ajax({
+            url: '/add-to-cart/' + proId,
+            method: 'get',
+            success: (response) => {
+                if (response.status) {
+                    let count = $('#cartCount').html()
+                    count = parseInt(count) + 1
+                    $("#cartCount").html(count)
+                    Swal.fire({
+                        position: 'center',
+                        icon: 'success',
+                        title: 'Added to Cart',
+                        showConfirmButton: false,
+                        timer: 800
+                    })
+                }
 
-			}
-		})
-	}
+            }
+        })
+    }
 
 
 
     function addToWishlist(proId) {
-		$.ajax({
-			url: '/add-to-wishlist/' + proId,
-			method: 'get',
-			success: (response) => {
-				if (response.status) {
-					let count = $('#wishCount').html()
-					count = parseInt(count) + 1
-					$("#wishCount").html(count)
-                     Swal.fire({
-                            position: 'center',
-                            icon: 'success',
-                            title: 'Added to Wishlist',
-                            showConfirmButton: false,
-                            timer: 800
-                        })
-				}
+        $.ajax({
+            url: '/add-to-wishlist/' + proId,
+            method: 'get',
+            success: (response) => {
+                if (response.status) {
+                    let count = $('#wishCount').html()
+                    count = parseInt(count) + 1
+                    $("#wishCount").html(count)
+                    Swal.fire({
+                        position: 'center',
+                        icon: 'success',
+                        title: 'Added to Wishlist',
+                        showConfirmButton: false,
+                        timer: 800
+                    })
+                }
 
-			}
-		})
-	}
+            }
+        })
+    }
 </script>
